// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HomePage > matches snapshot (keys, not translations) 1`] = `
<DocumentFragment>
  <section
    class="space-y-6"
  >
    <div>
      <h2
        class="text-3xl font-bold tracking-tight"
      >
        home.title
      </h2>
      <p
        class="mt-2 text-muted-foreground"
      >
        home.lead
      </p>
    </div>
    <div
      class="flex gap-3"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 ring-offset-background bg-primary text-primary-foreground hover:opacity-90 h-10 px-4 py-2"
      >
        home.buttons.primary
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`HomePage > matches snapshot 1`] = `
<DocumentFragment>
  <section
    class="space-y-6"
  >
    <div>
      <h2
        class="text-3xl font-bold tracking-tight"
      >
        home.title
      </h2>
      <p
        class="mt-2 text-muted-foreground"
      >
        home.lead
      </p>
    </div>
    <div
      class="flex gap-3"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 ring-offset-background bg-primary text-primary-foreground hover:opacity-90 h-10 px-4 py-2"
      >
        home.buttons.primary
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 ring-offset-background bg-secondary text-secondary-foreground hover:opacity-90 h-10 px-4 py-2"
      >
        home.buttons.secondary
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 ring-offset-background border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
      >
        home.buttons.outline
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 ring-offset-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
      >
        home.buttons.ghost
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 ring-offset-background text-primary underline-offset-4 hover:underline h-10 px-4 py-2"
      >
        home.buttons.link
      </button>
    </div>
  </section>
</DocumentFragment>
`;
